--- a/web_1_html_css/web1.css
+++ b/web_1_html_css/web1.css
@@ -1,7 +1,7 @@
 body {
     background: url('favorite.jpg') no-repeat;
     background-size: cover;
-    color: white;
+    color: pink;
 }
 
 ol {
@@ -13,10 +13,16 @@ ol li {
     float: left;
     width: 250px;
     height: 50px;
-    background-color: gray;
+    background-color: white;
     opacity: .9;
     line-height: 50px;
     text-align: center;
     font-size: 20px;
     margin: 0px;
+}
+ol li a {
+    display:block;
+}
+ol li a:hover {
+    background-color:#ffdce0; 
 }
