--- a/web_1_html_css/web1.css
+++ b/web_1_html_css/web1.css
@@ -26,5 +26,5 @@ ol li a {
     color:pink;
 }
 ol li a:hover {
-    content:url('arashi-jweb-profile.jpg');
+    content:url('s_arashi-jweb-profile.jpg');
 }
