--- a/web_1_html_css/web2.css
+++ b/web_1_html_css/web2.css
@@ -10,7 +10,7 @@ ul {
 #arashi_discription {
     height: 200px;
     width: 80%;
-    background-color: yellow;
+    background-color: black;
     opacity:.8 ;
-    color:black;
+    color:white;
 }
